--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
 }    
 header h1{ 
     font-size: 10rem;
-    color: white;
+    color: whitesmoke;
 }
 header p{ 
     font-size: 2rem; 
